# caniuse-serde

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: Agent.rs  AgentDetail.rs  AgentName.rs  AgentNameAndVersionSet.rs  AgentNameIterator.rs  AgentType.rs  Bug.rs  CanIUse.rs  Category.rs  EraName.rs  Eras.rs  Feature.rs  FeatureDetail.rs  FeatureName.rs  FeatureNameIterator.rs  Link.rs  ParentCategory.rs  ParentCategoryIterator.rs  Prefix.rs  PrefixVisitor.rs  RegionalUsage.rs  Status.rs  StatusIterator.rs  Support.rs  SupportDetail.rs  SupportMaturity.rs  SupportRangeIterator.rs  UsagePercentage.rs  Version.rs  VersionDetail.rs  VersionPart.rs  VersionRange.rs  data-2.0.json  data.json  lib.rs  region-usage-json  sensible_choices.rs  sensible_choices_default.rs  sensible_rules.rs  sensible_rules_default.rs
src/regional_usage/: RegionalUsage.rs  RegionalUsages.rs  RegionalUsagesFromStrError.rs  YearMonth.rs  mod.rs
src/systemTests/: mod.rs
